Display taxonomy, API calls for paginated views of barcodes and images

--- a/.htaccess
+++ b/.htaccess
@@ -23,3 +23,8 @@ RewriteRule map$ ?map [NC,L]
 # blast
 
 RewriteRule blast$ ?blast [NC,L]
+
+# taxonomy
+
+RewriteRule taxon/id/(\d+)$ ?taxonid=$1 [NC,L]
+
