--- a/.htaccess
+++ b/.htaccess
@@ -34,4 +34,8 @@ RewriteRule taxon/id/(\d+)$ ?taxonid=$1 [NC,L]
 
 RewriteRule recordset/(.*)$ ?recordset=$1 [NC,L]
 
+# api
+
+RewriteRule api$ ?api [NC,L]
+
 
